--- a/src/components/stylers/card.css
+++ b/src/components/stylers/card.css
@@ -1,14 +1,127 @@
-button {
-    border: none;
-    background-color: transparent;
-    padding: 0px 3px 0px 3px;
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
+
+body {
+  background-color: #f0f0f0;
+}
+h4, h5 {
+  font-family: 'Pacifico', cursive;
 }
 
-.buttons {
-    float: right;
+h4 {
+  color : #40a8a7;
+  /* Turquesa oscuro: color : #0D8080;*/
 }
 
-.cardimg {
+h5 {
+  /*color : #40a8a7;*/
+  color : #FF9900;
+}
+
+nav .nav-wrapper form, nav .nav-wrapper form .input-field{
+height: 100%;
+}
+
+.card-info, .card__meta a {
+    color: #3299BB !important;
+    display: inline-flex;
+    vertical-align: middle;
+    line-height: 2;
+    font-size: 1rem;
+}
+.card__meta i.small {
+    font-size: 1.5rem;
+}
+.card .card-content .card-title {
+    line-height: 34px;
+}
+.card__date {
+    background: #08c;
+    position: absolute;
+    top: 8px;
+    right: 7px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    background-color: black;
+    color: #fff;
+    text-align: center;
+    line-height: 14px;
+    font-weight: bold;
+    padding-top: 8px;
+}
+.card__date__day {
+  display: block;
+  font-size: 15px;
+}
+.card__date__month {
+  display: block;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+
+.card .card-content .card-title {
+    color: #0D8080 !important;
+    line-height: 18px;
+}
+
+.card .card-title {
+    
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.card .card-content p{
+  color: #1E1E1E;
+  font-size: 13px;
+}
+
+.collapsible{
+  background: #fff;
+}
+
+.card-row {
+  margin-bottom: 4px;
+    margin-top: 4px;
+}
+.card-action i {
+    vertical-align: text-bottom;
+    font-size: 21px;
+}
+
+
+
+.collapsible-header {
+    background-color: #3299BB;
+    color: #fff;
+}
+
+.filter-container ul {
+    padding: 1rem 2rem;
+}
+
+.filter-container ul li {
+    display: block;
+    padding: 16px 0 0;
+}
+
+.search-title-filter {
+  background-color: #3299BB;
+  color: #fff;
+}
+
+nav  {
+    background-color: #40a8a7;
+    border-color: #E7E7E7;
+    
+}
+
+nav ul>li>a, nav .brand-logo  {
+  color: #fff;
+}
+
+nav .brand-logo {
+  font-size: 1.4em !important;
+}
+
+#container {
+  padding: 20px 10px;
 }
