--- a/src/components/stylers/card.css
+++ b/src/components/stylers/card.css
@@ -1,25 +1,25 @@
-@import url("https://fonts.googleapis.com/css?family=Pacifico");
-
-body {
-  background-color: #f0f0f0;
-}
-h4, h5 {
-  font-family: 'Pacifico', cursive;
-}
 
 h4 {
   color : #40a8a7;
-  /* Turquesa oscuro: color : #0D8080;*/
+  font-size: 25px !important; 
+  font-weight: 700 !important;
+  font-family: 'Courgette', cursive;
 }
 
-h5 {
-  /*color : #40a8a7;*/
-  color : #FF9900;
+h5 {  
+  color : rgba(0, 0, 0, 0.989);  
+  font-family: 'Lato', sans-serif;
+  font-size: 18px !important;  
+  font-style: oblique;
+
 }
 
-nav .nav-wrapper form, nav .nav-wrapper form .input-field{
-height: 100%;
+h5 small {
+  font-size:12px !important;
+  font-weight: 100;
+  font-style: italic;
 }
+
 
 .card-info, .card__meta a {
     color: #3299BB !important;
@@ -124,4 +124,31 @@ nav .brand-logo {
 
 #container {
   padding: 20px 10px;
+}
+
+
+a.action-card-icons {
+  padding-right: 10px !important;
+  padding-left: 15px !important;
+ 
+}
+
+a.action-card-icons i {
+  padding: 0px 5px 0px 5px;
+}
+
+
+.hours {
+  padding-top: 15px;
+  margin-bottom: -50px !important;
+}
+
+.text_obs {
+  padding-top: 6px;
+}
+
+.text_obs p {
+  font-size: 14px !important;
+  font-weight: 300;
+  font-stretch: condensed;
 }
