--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Merienda+One');
+@import url('https://fonts.googleapis.com/css?family=Courgette|Lato|Pacifico|Merienda+One');
